--- a/traning2-1-1/traning2-1-1/Base.lproj/Main.storyboard
+++ b/traning2-1-1/traning2-1-1/Base.lproj/Main.storyboard
@@ -21,15 +21,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Obj-C講座をスタートしました。" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZz-DU-Aof">
-                                <rect key="frame" x="59" y="174" width="257" height="140"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mainLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZz-DU-Aof">
+                                <rect key="frame" x="148.5" y="323.5" width="78.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="FZz-DU-Aof" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="foE-g7-wVt"/>
+                            <constraint firstItem="FZz-DU-Aof" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pO2-A8-Ljn"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="mainLabel" destination="FZz-DU-Aof" id="9D8-aX-DO3"/>
